Fix keyboard popup after save on mobile

--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-  -webkit-appearance: button;
+  appearance: button;
   cursor: pointer;
 }
 
